# xiaozhi-linux-cc

./: .gitignore  CMakeLists.txt  DEVELOPING.md  INSTALL.md  LICENSE  README.MD  SCRIPT_FIX.md  TROUBLESHOOTING.md
configs/: config_for_code.json  default_config.json  rockchip_config.json
docs/: DEVELOPMENT.md  framework-overview.md
include/: xiaozhi_types.h
scripts/: build.sh  check_deps.sh  setup_env.sh  test_audio.sh  test_build.sh
src/: main.cpp
src/ai/: ai_engine.cpp  ai_engine.h  conversation_manager.cpp  conversation_manager.h
src/audio/: alsa_handler.cpp  alsa_handler.h  audio_manager.cpp  audio_manager.h  opus_decoder.cpp  opus_decoder.h  opus_encoder.cpp  opus_encoder.h
src/cli/: command_handler.cpp  command_handler.h
src/mcp/: json_rpc_handler.cpp  json_rpc_handler.h  mcp_server.cpp  mcp_server.h  tool_registry.cpp  tool_registry.h
src/network/: mqtt_client.cpp  mqtt_client.h  protocol_handler.cpp  protocol_handler.h  websocket_client.cpp  websocket_client.h
src/utils/: config_manager.cpp  config_manager.h  logger.cpp  logger.h  utils.h
systemd/: xiaozhi.service
tests/: test_config.json
